# extractAndMove

./: README.md  pyproject.toml
extractandmove/: app.py  app.spec  dark-blue.json
pkgs/: UI.py  constants.py  extract.py  pdf2md.py
